--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@
     <div class="container">
       <div class="logo-wrap">
         <div class="logo-box">
-          <!-- troque por: assets/logo.png -->
-          <img src="assets/logo.png" alt="TRX PRO" onerror="this.style.opacity=.45; this.alt='Coloque assets/logo.png';">
+          <!-- troque por: assets/logo.png ou jpeg -->
+          <img src="assets/logo.jpeg" alt="TRX PRO" onerror="this.style.opacity=.45; this.alt='Coloque assets/logo.jpeg';">
         </div>
 
         <div class="live-pill">
